# chenoj-backend/src/main/java/com/chen/chenoj/model/entity/QuestionSubmit.java
@@ -50,6 +50,11 @@ public class QuestionSubmit implements Serializable {
     private Long userId;
 
     /**
+     * 用户 账号
+     */
+    private String userAccount;
+
+    /**
      * 创建时间
      */
     private Date createTime;
